--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "moment": "^2.29.4",
     "morgan": "~1.9.1",
+    "mysql2": "^3.2.0",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
